Better low-level API

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,5 @@
     "typescriptreact"
   ],
   "vitest.enable": true,
-  "vitest.commandLine": "pnpm test --"
+  "testing.automaticallyOpenPeekView": "never"
 }
